--- a/public/addBook.html
+++ b/public/addBook.html
@@ -1,58 +1,63 @@
 <section class="container addbook-page">
     <form ng-submit="addbukz()">
-        <div class="row from-group">
-            <div class="col-md-2">
-                <img id="add-book-img-upload" class="img-responsive" src="/images/book-thumbnail.jpg" alt="book image" />
-                <progress class="add-book-progress-bar" value="0" max="100" id="uploader"></progress>
-            </div>
-            <div class="col-md-2 text-center">
-                <span class="btn btn-default add-book-upload-btn">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="row from-group">
+                    <div class="col-md-12">
+                        <img id="add-book-img-upload" class="img-responsive" src="/images/book-thumbnail.jpg" alt="book image" />
+                        <progress class="add-book-progress-bar" value="0" max="100" id="uploader"></progress>
+                    </div>
+                    <div class="col-md-12 text-center">
+                        <span class="btn btn-primary add-book-upload-btn">
                             Upload Image <input ng-model="photo" onchange="angular.element(this).scope().file_changed(this)" type="file" accept="image/*">
                         </span>
+                    </div>
+                </div>
             </div>
-        </div>
-        <br/>
-        <div class="form-group">
-            <label> Book Name : </label>
-            <input class="form-control" type="text" ng-model="bookName" />
-        </div>
-        <div class="form-group">
-            <label>Author : </label>
-            <input class="form-control" type="text" ng-model="authorName" />
-        </div>
-        <div class="form-group">
-            <label>Publication : </label>
-            <input class="form-control" type="text" ng-model="publication" />
-        </div>
-        <div class="form-group">
-            <label>Edition : </label>
-            <input class="form-control" type="text" ng-model="edition" />
-        </div>
-        <div class="form-group">
-            <label>Pages : </label>
-            <input class="form-control" type="number" min="1" ng-model="pages" />
-        </div>
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label> Book Name : </label>
+                    <input class="form-control" type="text" ng-model="bookName" />
+                </div>
+                <div class="form-group">
+                    <label>Author : </label>
+                    <input class="form-control" type="text" ng-model="authorName" />
+                </div>
+                <div class="form-group">
+                    <label>Publication : </label>
+                    <input class="form-control" type="text" ng-model="publication" />
+                </div>
+                <div class="form-group">
+                    <label>Edition : </label>
+                    <input class="form-control" type="text" ng-model="edition" />
+                </div>
+                <div class="form-group">
+                    <label>Pages : </label>
+                    <input class="form-control" type="number" min="1" ng-model="pages" />
+                </div>
 
-        <div class="form-group">
-            <label>Binding : </label>
-            <select class="form-control" ng-model="binding">
+                <div class="form-group">
+                    <label>Binding : </label>
+                    <select class="form-control" ng-model="binding">
                 <option value="Paperback">Papaerback</option>
                 <option value="Hardcover">Hardcover</option>
             </select>
+                </div>
+                <div class="form-group">
+                    <label>ISBN : </label>
+                    <input class="form-control" type="number" ng-model="isbn" />
+                </div>
+                <div class="form-group">
+                    <label>Price : </label>
+                    <input class="form-control" type="number" min="0" ng-model="price" />
+                </div>
+                <div class="form-group">
+                    <label>Description : </label>
+                    <textarea style="resize:none" class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
+                </div>
+                <input type="submit" class="btn btn-primary" />
+                <div ng-show="error" class="alert alert-danger add-book-alert"><strong>Caution : </strong> {{error}}</div>
+            </div>
         </div>
-        <div class="form-group">
-            <label>ISBN : </label>
-            <input class="form-control" type="number" ng-model="isbn" />
-        </div>
-        <div class="form-group">
-            <label>Price : </label>
-            <input class="form-control" type="number" min="0" ng-model="price" />
-        </div>
-        <div class="form-group">
-            <label>Description : </label>
-            <textarea style="resize:none" class="form-control" rows="5" ng-model="descriptions" maxlength="1024"></textarea>
-        </div>
-        <input type="submit" class="btn btn-primary" />
-        <div ng-show="error" class="alert alert-danger add-book-alert"><strong>Caution : </strong> {{error}}</div>
     </form>
 </section>
