--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,15 @@
     <link rel="stylesheet" href="/css/register.css">
     <link rel="stylesheet" href="/css/about.css">
     <script src="/js/app.js"></script>
-    <script src="/js/user.service.js"></script>
-    <script src="/js/book.service.js"></script>
-    <script src="/js/authController.js"></script>
+    <script src="/js/services/user.service.js"></script>
+    <script src="/js/services/book.service.js"></script>
+    <script src="/js/controller/authController.js"></script>
     <script src="/js/registerController.js"></script>
     <script src="/js/homeController.js"></script>
     <script src="/js/book.service.js"></script>
     <script src="/js/manageBooksController.js"></script>
     <script src="/js/addBookController.js"></script>
-    <script src="/js/bookController.js"></script>
+    <script src="/js/controller/bookController.js"></script>
 </head>
 
 <body ng-controller="authController">
