--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     <script src="/js/controller/authController.js"></script>
     <script src="/js/registerController.js"></script>
     <script src="/js/homeController.js"></script>
-    <script src="/js/book.service.js"></script>
-    <script src="/js/manageBooksController.js"></script>
+    <script src="/js/controller/book.service.js"></script>
+    <script src="/js/controller/manageBooksController.js"></script>
     <script src="/js/addBookController.js"></script>
     <script src="/js/controller/bookController.js"></script>
 </head>
