refactor home controller

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script src="/js/services/book.service.js"></script>
     <script src="/js/controller/authController.js"></script>
     <script src="/js/registerController.js"></script>
-    <script src="/js/homeController.js"></script>
+    <script src="/js/controller/homeController.js"></script>
     <script src="/js/controller/book.service.js"></script>
     <script src="/js/controller/manageBooksController.js"></script>
     <script src="/js/addBookController.js"></script>
