refactor service controller

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <script src="/js/services/user.service.js"></script>
     <script src="/js/services/book.service.js"></script>
     <script src="/js/controller/authController.js"></script>
-    <script src="/js/registerController.js"></script>
+    <script src="/js/controller/registerController.js"></script>
     <script src="/js/controller/homeController.js"></script>
     <script src="/js/controller/book.service.js"></script>
     <script src="/js/controller/manageBooksController.js"></script>
