--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <script src="/js/controller/homeController.js"></script>
     <script src="/js/controller/book.service.js"></script>
     <script src="/js/controller/manageBooksController.js"></script>
-    <script src="/js/addBookController.js"></script>
+    <script src="/js/controller/addBookController.js"></script>
     <script src="/js/controller/bookController.js"></script>
 </head>
 
